--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "formik": "^2.1.4",
+    "lodash": "^4.17.20",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
